k8s/influxdb/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: default
spec:
  selector:
    app: influxdb
  type: ClusterIP
  ports:
    - name: api
      port: 8086
      protocol: TCP
      targetPort: 8086
    - name: rpc
      port: 8088
      protocol: TCP
      targetPort: 8088
